<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_username_et">Your Username</string>
    <string name="label_email_et">Your Email</string>
    <string name="label_password_et">Your Password</string>
    <string name="label_confirm_password_et">Repeat Your Password</string>
    <string name="nav_change_pw_title">Change Password</string>
    <string name="nav_logout_title">Logout</string>
    <string name="open_drawer_nav_title">Open</string>
    <string name="close_drawer_nav_title">Close</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="place">Place</string>
    <string name="save">Save</string>
    <string name="event_name">Event Name</string>
    <string name="event_type">Event Type</string>
    <string name="offline_event">Offline Event</string>
    <string name="online_event">Online Event</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="participants_number">Participants Number</string>
    <string name="unlimit">Unlimit</string>
    <string name="member_number">Member Number</string>
    <string name="images">Images</string>
</resources>