<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.addingevent.AddingEventFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right|center_vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/text_color"
                android:fontFamily="@font/coremagicrough"
                android:background="@drawable/button_background" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/event_name"
                app:boxStrokeColor="@color/text_color"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_event_name"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tw_event_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/coremagicrough"
                android:text="@string/event_type"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_name_layout" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:orientation="horizontal"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tw_event_type">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/offlineRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/offline_event"
                    android:textColor="@color/text_color" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/onlineRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/online_event"
                    android:textColor="@color/text_color" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/description"
                app:boxStrokeColor="@color/text_color"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_or_link_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_or_link_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/place"
                app:boxStrokeColor="@color/text_color"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_place_or_link"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/start_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/start_date_et_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/start_date"
                    app:boxStrokeColor="@color/text_color"
                    app:hintTextColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_start_date"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="datetime" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start_date_picker"

                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/ic_baseline_calendar_today_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_date_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/end_date_et_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/end_date"
                    app:boxStrokeColor="@color/text_color"
                    app:hintTextColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_end_date"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="datetime" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_end_date_picker"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/ic_baseline_calendar_today_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/tw_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/coremagicrough"
                android:text="@string/participants_number"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_date_layout" />

            <LinearLayout
                android:id="@+id/limit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tw_participants">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_unlimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/unlimit"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_member_number_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/member_number"
                    android:textColorHint="@color/text_color"
                    app:boxStrokeColor="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_member_number"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="1"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tw_images_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/limit_layout">

                <TextView
                    android:id="@+id/tw_images"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/coremagicrough"
                    android:text="@string/images"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_open_gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_baseline_cloud_upload_24" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_picked_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tw_images_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>