<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.Register.RegisterFragment">

    <LinearLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@color/main_background">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_layout">
        <TextView
            android:id="@+id/textview_wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:text="WELLCOME BACK"
            android:fontFamily="@font/coremagicrough"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textview_wellcome"
            android:textColor="@color/text_color"
            android:fontFamily="@font/coremagicrough"
            android:text="Login to contitnue!"/>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username_layout"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:hint="@string/label_username_et">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_layout"
        android:hint="@string/label_email_et">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
        android:hint="@string/label_password_et">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout"
        android:hint="@string/label_confirm_password_et">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_doregister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password_layout"
        android:background="@drawable/button_background"
        android:textColor="@color/text_color"
        android:fontFamily="@font/coremagicrough"
        android:text="Login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/coremagicrough"
        android:text="Cancel"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_doregister"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>