<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    android:background="@drawable/event_item_background">

    <LinearLayout
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUserProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="User Name"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>
    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/circle_indicator"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:ci_drawable="@drawable/icon_indicator"
        app:ci_drawable_unselected="@drawable/icon_indicator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivDropLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/dislike" />

        <ImageView
            android:id="@+id/ivJoinEvent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/join_event_icon" />

        <ImageView
            android:id="@+id/ivComment"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/icons8_comments_64" />

        <ImageView
            android:id="@+id/ivEventLocation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/location_icon" />
        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_qr_code_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/tw_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtShowEventStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:text="@string/start_date"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtEventStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtShowEventEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:text="@string/end_date"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtEventEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtShowEventPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:text="@string/place"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtEventPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>